Removed fb, added g+

--- a/static/index.html
+++ b/static/index.html
@@ -75,8 +75,7 @@
             <h3>Who</h3>
               <p>Google Software Engineer</p>
             <h3>Where</h3>
-              <p>G+</p>
-              <p>Facebook</p>
+              <p><a href="https://plus.google.com/u/0/+AlexanderAprelev">G+</a></p>
             <h3>What</h3>
               <p>Google Photos Android</p>
               <p>Halide</p>
