Add comodo icon

--- a/static/index.html
+++ b/static/index.html
@@ -61,6 +61,7 @@
               <input class="mdl-textfield__input" type="text" id="search">
               <label class="mdl-textfield__label" for="search">Enter your query...</label>
             </div>
+            <img src="images/comodo_secure_seal_113x59_transp.png"/> 
           </div>
         </div>
       </header>
@@ -82,6 +83,11 @@
           </div>
         </div>
       </main>
+      <footer class="demo-footer mdl-layout__footer">
+        <div class="mdl-layout__footer-row">
+           <img src="images/comodo_secure_seal_113x59_transp.png"/>
+        </div>
+      </footer>
     </div>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <script src="$$hosted_libs_prefix$$/$$version$$/material.min.js"></script>
