Add comodo scripts

--- a/static/index.html
+++ b/static/index.html
@@ -46,6 +46,13 @@
       z-index: 900;
     }
     </style>
+
+    <script type="text/javascript"> //<![CDATA[ 
+    var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+    document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+    //]]>
+    </script>
+
   </head>
   <body>
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
@@ -61,7 +68,6 @@
               <input class="mdl-textfield__input" type="text" id="search">
               <label class="mdl-textfield__label" for="search">Enter your query...</label>
             </div>
-            <img src="images/comodo_secure_seal_113x59_transp.png"/> 
           </div>
         </div>
       </header>
@@ -91,5 +97,8 @@
     </div>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <script src="$$hosted_libs_prefix$$/$$version$$/material.min.js"></script>
+
+    <script language="JavaScript" type="text/javascript">TrustLogo("https://aprelev.com/images/comodo_secure_seal_113x59_transp.png", "CL1", "none");</script>
+    <a href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a
   </body>
 </html>
