--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
     }
     </style>
 
-    <script src="https://secure.comodo.com/trustlogo/javascript/trustlogo.js"/>
+    <script src="https://secure.comodo.com/trustlogo/javascript/trustlogo.js"></script>
   </head>
   <body>
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
