Fixing anchor tag

--- a/static/index.html
+++ b/static/index.html
@@ -94,6 +94,6 @@
     <script src="$$hosted_libs_prefix$$/$$version$$/material.min.js"></script>
 
     <script language="JavaScript" type="text/javascript">TrustLogo("https://aprelev.com/images/comodo_secure_seal_113x59_transp.png", "CL1", "none");</script>
-    <a href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a
+    <a href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a>
   </body>
 </html>
